add openapi for sleep records
